log
Sat 15 Oct 2022 04:03:52 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
55452c4
Sat 15 Oct 2022 04:09:28 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:21: error: ‘HeapElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   40 |   new->heapArray = (HeapElem *)malloc(sizeof(HeapElem));
      |                     ^~~~~~~~
      |                     heapElem
heap.c:40:21: note: each undeclared identifier is reported only once for each function it appears in
heap.c:40:31: error: expected expression before ‘)’ token
   40 |   new->heapArray = (HeapElem *)malloc(sizeof(HeapElem));
      |                               ^
Compilation failed
e163c55
Sat 15 Oct 2022 04:09:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:46: error: ‘HeapElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   40 |   new->heapArray = (heapElem *)malloc(sizeof(HeapElem));
      |                                              ^~~~~~~~
      |                                              heapElem
heap.c:40:46: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
eacfedd
Sat 15 Oct 2022 04:09:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47a1d1d
Sat 15 Oct 2022 04:09:57 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
ac77946
Sat 15 Oct 2022 04:24:47 PM UTC: 
 heap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
78ddf64
Sat 15 Oct 2022 04:43:43 PM UTC: 
 heap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:68:25: error: ‘indexch1’ undeclared (first use in this function); did you mean ‘index1’?
   68 |       if (pq->heapArray[indexch1].priority > pq->heapArray[i].priority){
      |                         ^~~~~~~~
      |                         index1
heap.c:68:25: note: each undeclared identifier is reported only once for each function it appears in
heap.c:71:43: error: ‘apt2’ undeclared (first use in this function); did you mean ‘pt2’?
   71 |         pq->heapArray[indexch1].priority= apt2;
      |                                           ^~~~
      |                                           pt2
heap.c:72:39: error: ‘adata2’ undeclared (first use in this function); did you mean ‘data2’?
   72 |         pq->heapArray[indexch1].data= adata2;
      |                                       ^~~~~~
      |                                       data2
heap.c:76:45: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   76 |     else if (pq->heapArray[index2].priority > pq->heapArray[index2].priority){
      |                                             ^
heap.c:63:11: error: unused variable ‘data2’ [-Werror=unused-variable]
   63 |     void *data2 = pq->heapArray[i].data;
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
bf91c01
Sat 15 Oct 2022 04:44:18 PM UTC: 
 heap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:69:50: error: ‘indexch1’ undeclared (first use in this function); did you mean ‘index1’?
   69 |         pq->heapArray[i].priority= pq->heapArray[indexch1].priority;
      |                                                  ^~~~~~~~
      |                                                  index1
heap.c:69:50: note: each undeclared identifier is reported only once for each function it appears in
heap.c:76:45: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   76 |     else if (pq->heapArray[index2].priority > pq->heapArray[index2].priority){
      |                                             ^
cc1: all warnings being treated as errors
Compilation failed
acfe7c8
Sat 15 Oct 2022 04:44:32 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:71:23: error: ‘indexch1’ undeclared (first use in this function); did you mean ‘index1’?
   71 |         pq->heapArray[indexch1].priority= pt2;
      |                       ^~~~~~~~
      |                       index1
heap.c:71:23: note: each undeclared identifier is reported only once for each function it appears in
heap.c:76:45: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   76 |     else if (pq->heapArray[index2].priority > pq->heapArray[index2].priority){
      |                                             ^
cc1: all warnings being treated as errors
Compilation failed
df93aa2
